--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Personal Calorie Counter</string>
+    <string name="Food_name">Name</string>
+    <string name="Food_kilojoules">Name</string>
+    <string name="Food_calories">Name</string>
+    <string name="Food_amount">Name</string>
+
 </resources>
